client-side/styles/views/_mobile-pages.sass
body.mobile
	background: url("#{$images}/mobile/bg-mobile.jpg")
	background-size: 100% 100%
	position: relative
	min-width: 100%

	-webkit-touch-callout: none
	-webkit-user-select: none
	-khtml-user-select: none
	-moz-user-select: none
	-ms-user-select: none
	user-select: none

	.debug
		position: absolute
		top: 0
		left: 0

	.page
		position: absolute
		display: table
		height: 100%
		width: 100%

		.content-wrapper
			display: table-cell
			text-align: center
			vertical-align: middle

			img
				max-width: 100%
				display: block
				margin: 0 auto

			a
				display: inline-block
				&.sync-btn
					width: 80%

			input[type="text"]
				width: 80%
				margin: 1em 0
				height: 1.5em
				line-height: 1em
				font-size: 150%
				text-align: center
				outline: none

		&.gameplay
			background: url("#{$images}/mobile/gameplay-arrows.png") center 30% no-repeat
			background-size: 25%

			.balls-bounds
				position: absolute
				bottom: 0
				right: 0
				left: 0
				top: 0
				height: 80%

				.balls-wrapper
					position: relative
					height: 80%
					top: 25%

					.ball
						position: absolute
						-webkit-transform: scale(0.8)
						-webkit-transition: opacity 0.2s ease-out
						transition: opacity 0.2s ease-out
						opacity: 1

						&.super
							margin-top: -32px

						&.hide
							opacity: 0

			.text
				position: absolute
				bottom: 15%

